[build-system]
requires = ["setuptools>=82.0.1", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution of exp4-age at Uni Kassel"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["nomad-lab[parsing, infrastructure]==1.4.2", "setuptools"]


[project.urls]
repository = "https://github.com/exp4-age/nomad-oasis"

[project.optional-dependencies]
# Add your plugins to the list below.
plugins = [
  "nomad-age @ git+https://github.com/exp4-age/nomad-age.git@1c7cb8d20c56854bbb2ef3fcb7a334e6491abcbb",
  "nomad-north-jupyter>=0.2.5"
]
jupyter = ["jupyter-events", "evaluix", "trackpy", "h5py"]
gpu-action = []
cpu-action = []

dev = ["nomad-lab[infrastructure, dev]==1.4.2"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["hyperspy>=1.7.6"]
prerelease = "disallow"

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
